deploy: 15612d3d9d965be99547549097454fd60f759569

--- a/404.html
+++ b/404.html
@@ -18,7 +18,7 @@
 <body class=page-404 id=pagetop>
 <header class=nav_header>
 <nav class="wrap nav menu">
-<a href=https://erzz.github.io/workflows/ class=nav_brand>
+<a href=https://erzz.github.io/workflows class=nav_brand>
 <picture data-lit=https://erzz.github.io/workflows/images/logo.png data-dark=https://erzz.github.io/workflows/images/logo.png>
 <source srcset=https://erzz.github.io/workflows/images/logo.png media="(prefers-color-scheme: dark)">
 <img srcset=https://erzz.github.io/workflows/images/logo.png alt="erzz/workflows Logo">
@@ -57,7 +57,7 @@
 <div class="main wrap pt-4">
 <main>
 <h1 id=title>Not found</h1>
-<p>Bummer! This page doesn't exist. <a href=https://erzz.github.io/workflows/>back home</a>.</p>
+<p>Bummer! This page doesn't exist. <a href=https://erzz.github.io/workflows>back home</a>.</p>
 </main></div>
 <footer class="pt-2 pb-2">
 <div class=wrap>
