deploy: 431c7685985a48f8e6a3ec5e3be8961225ea7e43

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!doctype html><html lang=en class=dark>
 <head><meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1"><meta name=generator content="Hugo 0.91.2">
-<link rel=apple-touch-icon sizes=180x180 href=/apple-touch-icon.png>
-<link rel=icon type=image/png sizes=32x32 href=/favicon-32x32.png>
-<link rel=icon type=image/png sizes=16x16 href=/favicon-16x16.png>
-<link rel=manifest href=/site.webmanifest>
+<link rel=apple-touch-icon sizes=180x180 href=./apple-touch-icon.png>
+<link rel=icon type=image/png sizes=32x32 href=./favicon-32x32.png>
+<link rel=icon type=image/png sizes=16x16 href=./favicon-16x16.png>
+<link rel=manifest href=./site.webmanifest>
 <title>erzz/workflows</title><meta property="og:title" content="erzz/workflows">
 <meta property="og:description" content>
 <meta property="og:type" content="website">
@@ -18,7 +18,7 @@
 <body class=page-home id=pagetop>
 <header class=nav_header>
 <nav class="wrap nav menu">
-<a href=https://erzz.github.io/workflows/ class=nav_brand>
+<a href=https://erzz.github.io/workflows class=nav_brand>
 <picture data-lit=https://erzz.github.io/workflows/images/logo.png data-dark=https://erzz.github.io/workflows/images/logo.png>
 <source srcset=https://erzz.github.io/workflows/images/logo.png media="(prefers-color-scheme: dark)">
 <img srcset=https://erzz.github.io/workflows/images/logo.png alt="erzz/workflows Logo">
@@ -74,7 +74,7 @@ Feel free to open a <a href=https://github.com/erzz/workflows/pulls>PR</a>, rais
 </div>
 <p><a href=docs/ class=button>Read the Docs</a><a href=https://github.com/erzz/workflows class=button>Go to the source</a></p>
 </div>
-<div><img src=/images/workflows.png alt=diy></div>
+<div><img src=./images/workflows.png alt=diy></div>
 </section>
 </div></div>
 <footer class="pt-2 pb-2">
